--- a/Session2/session2.ipynb
+++ b/Session2/session2.ipynb
@@ -9,7 +9,7 @@
     "<br> MA1 Mechanical Engineering <br>  __Vibrations and Acoustics__ <br> Academic year 2022-2023 <br> \n",
     "***\n",
     "***\n",
-    "<font color='Navy'><h1><center>Session 1 : One DOF system</center></h1></font> \n",
+    "<font color='Navy'><h1><center>Session 2 : Multiple DOF system</center></h1></font> \n",
     "***\n",
     " "
    ]
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "<center><b>Welcome to the first session </b></center>"
+    "<center><b>Welcome to the second session </b></center>"
    ]
   },
   {
@@ -39,13 +39,10 @@
    "id": "6c0dc1bc",
    "metadata": {},
    "source": [
-    "__During the parctical session we will make use of three very common library in python. Namely, numpy, scipy and matplotlib__ \n",
+    "__During the parctical session, we will use the same libraries as the one used in the session1__ \n",
     "<br>\n",
-    "1. NumPy is a fundamental package for scientific computing in Python. It provides powerful matrix manupulation, basic linear algebra and much more\n",
-    "2. SciPy is a collection of mathematical algorithms and convenience functions built on the NumPy extension of Python.\n",
-    "3. Matplotlib is a Python 2D plotting library. <br>\n",
-    "***\n",
-    "NB : let me remind you that a package is just a collection of code (module) that you can import and use. If you want to learn more about a package, you shall go and visit the website of the package."
+    "However, we will ramp up our game and start using more advanced plots (subplots) <br>\n",
+    "***"
    ]
   },
   {
@@ -58,7 +55,9 @@
     "# let's import both numpy and matplotlib.pyplot \n",
     "# the \"as\" in the code bellow is to tell python that if we reference to the package using np and plt \n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt \n"
+    "import matplotlib.pyplot as plt \n",
+    "import scipy as sp\n",
+    "\n"
    ]
   },
   {
@@ -92,8 +91,8 @@
    "id": "ade26545",
    "metadata": {},
    "source": [
-    "Consider the following one-degree-of-freedom (1 DOF) system :\n",
-    "<img src=\"./Images/SDOF.png\" width=200 height=200 />\n"
+    "Consider the following three-degree-of-freedom (3 DOFs) system :\n",
+    "<img src=\"./Images/MDOF.png\" width=200 height=200 />\n"
    ]
   },
   {
@@ -106,59 +105,165 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d5c7698",
+   "metadata": {},
+   "source": [
+    "\n",
+    "$\\left[\\begin{array}{ccc}m & 0 & 0 \\\\ 0 & m & 0 \\\\ 0 & 0 & m\\end{array}\\right]\\left\\{\\begin{array}{l}\\ddot{x}_{1} \\\\ \\ddot{x}_{2} \\\\ \\ddot{x}_{3}\\end{array}\\right\\}+\\left[\\begin{array}{ccc}c_{1}+c & -c & 0 \\\\ -c & 2 c & -c \\\\ 0 & -c & c\\end{array}\\right]\\left\\{\\begin{array}{l}\\dot{x_{1}} \\\\ \\dot{x_{2}} \\\\ \\dot{x_{3}}\\end{array}\\right\\}+\\left[\\begin{array}{ccc}k_{1}+k & -k & 0 \\\\ -k & 2 k & -k \\\\ 0 & -k & k\\end{array}\\right]\\left\\{\\begin{array}{l}x_{1} \\\\ x_{2} \\\\ x_{3}\\end{array}\\right\\}=\\left\\{\\begin{array}{l}0 \\\\ 0 \\\\ f\\end{array}\\right\\}$ \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3e4ca0cd",
    "metadata": {},
-   "source": []
+   "source": [
+    "For the numerical values $m = 1 kg$, $k = k1 = 16 N/m$, $c = c1 = 0.1 N s/m$. <br> Compute the\n",
+    "eigenfrequencies and the modeshapes of the conservative system. Represent the modeshapes, and check the orthogonality conditions. ."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
+   "id": "0f9de8c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the first argument of the function below is a star\n",
+    "# don't worry about it, it is just there to force you set \n",
+    "# the key word argument when calling the function,\n",
+    "# which avoid you to mix up the arguement \n",
+    "def buildSystemMatrix(*,m:float,k:float,k1:float,c:float,c1:float): \n",
+    "    \"\"\"\n",
+    "    Implement a function that computes the build the system matrix\n",
+    "\n",
+    "    Arguments:\n",
+    "    m,k,k1,c,c1 -- parameters of the MDOF system\n",
+    "\n",
+    "    Returns:\n",
+    "    m_mat : The M matrix from the system equation\n",
+    "    k_mat : The K matrix from the system equation\n",
+    "    c_mat : The C matrix from the system equation\n",
+    "  \n",
+    "    Tips use np.array([[],[],[]]) to define your 2D matrix\n",
+    "    check documentation FMI 'Numpy.array()'\n",
+    "    \"\"\"  \n",
+    "    # here is an example of how to set a matrix \n",
+    "    k_mat=np.array([[k1+k, -k, 0],\n",
+    "           [-k, 2*k, -k],\n",
+    "           [0, -k, k]])\n",
+    "    \n",
+    "    ###BEGIN SOLUTION\n",
+    "    m_mat=np.identity(3)*m\n",
+    "    c_mat=np.array([[c1+c, -c, 0],\n",
+    "            [-c, 2*c, -c],\n",
+    "            [0,-c,c]])\n",
+    "    ###END SOLUTION\n",
+    "    return k_mat, m_mat, c_mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9fd7de38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert np.sum(np.square(buildSystemMatrix(m=1,k=16,k1=16,c=0.1,c1=0.1)[1] -np.array([[1., 0., 0.],\n",
+    "                                                                    [0., 1., 0.],\n",
+    "                                                                    [0., 0., 1.]]))) ==0 ,'your M matrix is not ok '\n",
+    "assert np.sum(np.square(buildSystemMatrix(m=1,k=16,k1=16,c=0.1,c1=0.1)[2]-np.array([[ 0.2, -0.1,  0. ],\n",
+    "       [-0.1,  0.2, -0.1],\n",
+    "       [ 0. , -0.1,  0.1]])))==0 , 'your C matrix is not OK'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "id": "24c6a9a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calcW_n(k:float,m:float):\n",
+    "def calcEigenfrequencies(*,k:np.array,m:np.array):\n",
     "    \"\"\"\n",
-    "    Implement the expression of W_n\n",
+    "    Implement a function that computes the eigenfrequencies\n",
+    "    based on the system parameter\n",
     "\n",
     "    Arguments:\n",
-    "    k, m -- parameters of the SDOF system\n",
+    "    k, m -- parameters of the MDOF system\n",
     "\n",
     "    Returns:\n",
-    "    w_n -- the value of w_n, computed using the formula seen in the course\n",
+    "    V -- the value of eig value of the matrix k\n",
+    "    D -- the value of eig value of the matrix m\n",
+    "    f -- the value of f, \n",
+    "  \n",
+    "    Reminder : eig freq  are computed solving for \n",
+    "    tips : use the np.linalg.eig() to compute the eigen value of\n",
+    "            square matrix  (more info in ~https://numpy.org/doc/stable/reference/generated/numpy.linalg.eig.html)\n",
     "    \"\"\"   \n",
     "\n",
     "    ### BEGIN SOLUTION\n",
-    "    w_n = np.sqrt(k/m)\n",
+    "    V,D=sp.linalg.eig(a=k_mat,b=m_mat)\n",
+    "    print(D)\n",
+    "    f= 1/(2*np.pi)*np.sqrt(np.diag(D))\n",
+    "\n",
     "    ### END SOLUTION\n",
     "\n",
-    "    return w_n\n",
+    "    return V, D, f\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "21c7d862",
+   "execution_count": 101,
+   "id": "d3ac0ed8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.59100905 -0.73697623 -0.32798528]\n",
+      " [-0.73697623 -0.32798528 -0.59100905]\n",
+      " [ 0.32798528  0.59100905 -0.73697623]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ybelhadj\\AppData\\Roaming\\Python\\Python37\\site-packages\\ipykernel_launcher.py:22: RuntimeWarning: invalid value encountered in sqrt\n"
+     ]
+    }
+   ],
    "source": [
-    "assert calcW_n(12,3)==2.0\n",
-    "assert calcW_n(16,4) == 2.0\n",
-    "assert calcW_n(64,4) == 4.0"
+    "#call the function we defined earlier to compute the K M C matrix\n",
+    "k_mat, m_mat, c_mat =buildSystemMatrix(m=1,k=16,k1=16,c=0.1,c1=0.1)\n",
+    "#call the function we defined earlier to compute the V D f matrix\n",
+    "###BEGIN SOLUTION\n",
+    "V,D,f=calcEigenfrequencies(k=k_mat,m=m_mat)\n",
+    "###END SOLUTION\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "29288582",
+   "execution_count": 102,
+   "id": "69336729",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.12235373,        nan,        nan])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for i in range(5):\n",
-    "    a=np.random.randint(100)\n",
-    "    b=np.random.randint(100)\n",
-    "    assert calcW_n(a,b)==np.sqrt(a/b)"
+    "f"
    ]
   },
   {
@@ -168,15 +273,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calcXi(c:float,m:float,k:float):\n",
+    "def checkOrthogonality(V,m,):\n",
     "    \"\"\"\n",
-    "    Implement the expression of W_n\n",
-    "    \n",
-    "    Arguments:\n",
-    "    k,m -- parameter of the SDOF system\n",
-    "    \n",
-    "    Returns:\n",
-    "    w_n -- the value of w_n, computed using the formula seen in the course\n",
+    "    Implement a function that checks if the mode are orthogonal\n",
     "    \"\"\"   \n",
     "\n",
     "    ### BEGIN SOLUTION\n",
@@ -191,11 +290,7 @@
    "id": "0a10c989",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "assert calcXi(20,1,1)==10.0\n",
-    "assert calcXi(20,2,2) == 5.0\n",
-    "assert calcXi(36,3,3) == 6.0"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -203,14 +298,7 @@
    "id": "91370ba5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for i in range(5):\n",
-    "    a=np.random.randint(1,100)\n",
-    "    b=np.random.randint(1,100)\n",
-    "    c=np.random.randint(1,100)\n",
-    "    \n",
-    "    assert calcXi(a,b,c)==a/(2*np.sqrt(b*c))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
